[gd_scene load_steps=12 format=3 uid="uid://d2lwteap0h55i"]

[ext_resource type="Texture2D" uid="uid://b1kfjj3a2kult" path="res://props/EnemySprites/Small_Enemy.png" id="1_dsaot"]
[ext_resource type="Script" path="res://scenes/enemies/burger_enemies/small_enemy/small_enemy.gd" id="1_hxtr8"]
[ext_resource type="Shader" path="res://scenes/enemies/burger_enemies/small_enemy/small_enemy.gdshader" id="1_skgg8"]
[ext_resource type="AudioStream" uid="uid://cb04enywbw65w" path="res://music/monster-death-grunt.mp3" id="4_rrpoe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2t7oc"]
shader = ExtResource("1_skgg8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6vqxq"]
radius = 27.0
height = 81.0

[sub_resource type="Animation" id="Animation_y5bd7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3uds1"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ruq80"]
_data = {
"RESET": SubResource("Animation_y5bd7"),
"flash": SubResource("Animation_3uds1")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_npw7u"]
radius = 26.0
height = 98.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwa6r"]
height = 58.0

[node name="SmallEnemy" type="CharacterBody2D"]
position = Vector2(-1, -16)
floor_max_angle = 0.872665
floor_snap_length = 20.0
script = ExtResource("1_hxtr8")
SPEED = 150.0
hitpoints = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dsaot")

[node name="SmallEnemySprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2t7oc")
position = Vector2(0, 0.5)
scale = Vector2(1, 1.01111)
texture = ExtResource("1_dsaot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 19)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6vqxq")

[node name="RayCast2DWallLeft" type="RayCast2D" parent="."]
position = Vector2(1, 16)
target_position = Vector2(-41, 0)

[node name="RayCast2DWallRight" type="RayCast2D" parent="."]
position = Vector2(1, 16)
target_position = Vector2(42, 0)

[node name="RayCast2DFloor" type="RayCast2D" parent="."]
position = Vector2(31, 9)
target_position = Vector2(0, 124)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SmallEnemySprite")
libraries = {
"": SubResource("AnimationLibrary_ruq80")
}

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(-30, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(31, 28)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_npw7u")
debug_color = Color(0.943072, 0.19714, 0.351957, 0.42)

[node name="HeadHitbox" type="Area2D" parent="." groups=["Enemies", "EnemyHeadsArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qwa6r")
debug_color = Color(0.811887, 0.00209985, 0.982958, 0.42)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rrpoe")

[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
[connection signal="area_entered" from="HeadHitbox" to="HeadHitbox" method="_on_area_entered"]
